# FBServer

./: README.md
Lobby/: Server.sln  select.cpp
Lobby/netdrv/: NetDrv.vcxproj  NetDrv.vcxproj.filters
Lobby/netdrv/include/: KwNetBasics.h  KwNetDrv.h  KwNetMessage.h  KwNetRemoteDebugServer.h  KwNetStreamPointer.h  KwNetStreamSystem.h
Lobby/netdrv/source/: KwNetAcceptor.cpp  KwNetDrvStable.cpp  KwNetRemoteDebugServer.cpp  KwNetSocket.cpp  KwNetStreamPointer.cpp  KwNetStreamSystem.cpp
Lobby/public/: Array_Base.inl  AtomicLock.cpp  AtomicLock.h  ChatDefine.h  Define.h  DefineResult.h  Enum.h  ExceptionHandler.cpp  ExceptionHandler.h  JsonSerialization.h  KwGamePublic.vcxproj  KwGamePublic.vcxproj.filters  List.cpp  MessageFactoryManager.cpp  MessageFactoryManager.h  ModuleDefine.h  StringHashMap.cpp  StringHashMap.h  Struct.cpp  Struct.h  StructMacro.h  StructPlatform.cpp  TypeDefine.h  Version.h
Lobby/public/Connector/: ConnectThread.cpp  Connector.cpp  ConnectorManager.h  ConnectorManager_Epoll.h  ConnectorManager_Select.cpp  ConnectorManager_Select.h  ConnectorPool.h  ServerConnector.h  ServerConnectorManager.cpp  ServerConnectorManager.h  udpsender.h
Lobby/public/Core/: ArchiveHolder.h  BaseTool.h  BaseTool_Log.cpp  BaseTool_Time.cpp  DecoderManager.cpp  FileConfigConst.h  GameLogDefine.h  HashMap.h  IpRegionConfig.cpp  LogAssistant.cpp  LogAssistant.h  ScriptIDConst.h  Setting.cpp  Setting.h  TemplateUtils.h  ThreadContainer.h  act_define.h  record_format.h
Lobby/public/DataBase/: DBConst.h  DBCore.cpp  DBCore.h  KLODBCBase.cpp  KLODBCBase.h  MKManager.cpp  SqlStatement.cpp  SqlStatement.h
Lobby/public/Defines/: RoomDefine.h
Lobby/public/Messages/: CGPing.cpp  CGRPCCallMsg.cpp  CGRPCCallMsg.h  CGReqeustLogin.cpp  CGRpcInvokeMsg.cpp  CGRpcInvokeMsg.h  GCEncryptKey.cpp  GCHandShake.cpp  GCRPCCallMsg.cpp  GCRPCCallMsg.h  GCRpcInvokeMsg.cpp  SSHandShake.h
Lobby/public/Module/: ModuleComponent.cpp  ModuleComponent.h  ModuleConnectorManager.h  ModuleExportInterface.cpp  ModuleManager.cpp  ModulePacket.h  ModulePacketMessage.cpp  ModulePacketMessage.h
Lobby/public/TAB/: TAB.cpp  TabDefine.h
Lobby/public/Utilities/: PacketUseCount.cpp  SplitStringBase.h  SplitStringLevelTwo.h
Lobby/resource/: RunCoordinator.bat  RunLocalServer.bat  RunMA.bat  RunMB.bat  RunServer1.bat  RunServer2.bat  RunServer3.bat
Lobby/resource/sql/: db_version_1.sql  db_version_2.sql
Lobby/server/: GameServer.aps  GameServer.vcxproj  GameServer.vcxproj.filters  SnidallocateeDBProxy.cpp
Lobby/server/CMake/: CMakeLists.txt
Lobby/server/include/: CGRPChandler.h  ChatManager.h  ClientConnector.h  ClientGateManager.h  ClientSession.h  CommonObjectPool.h  DBOper.h  DBProxyManager.h  DefinePropertyStruct.h  ExtendedObjectPool.h  GameMail.h  GameMailStruct.h  GameServer.h  GameServerMainThread.h  IncomingConnectorManager.h  IndexAllocManager.h  MailDBProxy.h  MailDefine.h  MailManager.h  MsgTransDefine.h  OnlinePlayer.h  OnlinePlayerManager.h  PlayerArchiveStruct.h  PlayerDBProxy.h  PrivateTest.h  PropertyGlobal.h  PropertyMailState.h  PropertyPlayerState.h  PropertySnidAccountRelation.h  PropertyVersion.h  RegisterPlayer.h  RegisterPlayerManager.h  RegisterPlayerStruct.h  RobotData.h  RobotManager.h  RoomData.h  RoomMgr.h  ServerModuleBase.h  ServerModuleExportInterface.h  ServerModuleManager.h  (+8 more)
Lobby/server/source/: CGHandShakeHandler.cpp  CGPingHandler.cpp  CGRPChandler.cpp  CGRequestLoginHandler.cpp  CGRpcInvokeMsgHandler.cpp  ChatManager.cpp  ClientConnector.cpp  ClientGateManager.cpp  ClientSession.cpp  DBOper.cpp  DBProxyManager.cpp  GCMsgHandler.cpp  GameMailStruct.cpp  GameServer.cpp  GameServerMainThread.cpp  IncomingConnectorManager.cpp  IndexAllocManager.cpp  MailDBProxy.cpp  MailManager.cpp  OnlinePlayer.cpp  OnlinePlayerManager.cpp  PlayerArchiveStruct.cpp  PlayerDBProxy.cpp  RegisterPlayerManager.cpp  RegisterPlayerStruct.cpp  RobotData.cpp  RobotManager.cpp  RoomData.cpp  RoomMgr.cpp  SSHandShakeHandler.cpp  ServerModuleBase.cpp  ServerModuleManager.cpp  ServerModuleRouter.cpp  ServerModuleThreadContainer.cpp  ServerModuleUtils.cpp  SessionConnectorManager.cpp  SnidAllocArchiveData.cpp  SnidAllocManager.cpp
Lobby/thirdparties/lzopro/: LICENSE  README.1ST
Public/: ClientRPCMethodInterface.h  FixedString.h  PacketDataStream.h  ShareStruct.h  ShareStructDefine.h  SharedTypes.h
client/BaseTool/: BaseTool_String.cpp
client/Core/: CoreBase.cpp  CoreBase.h  DebugUtilities.cpp  DebugUtilities.h  GameMisc.cpp  GameMisc.h
client/GameClient/: GameClient.sln
client/GameClient/GameClient/: GameClient.cpp  GameClient.vcxproj  GameClient.vcxproj.filters  ReadMe.txt  stdafx.cpp
client/NetWork/: GameNetBase.h  GameNetCommand.h  GameNetConnector.cpp  GameNetConnector.h  GameNetMessageDefine.h  GameNetMessageEncryptor.cpp  GameNetMessageEncryptor.h  GameNetMessageFactory.cpp  GameNetMessageFactory.h  GameNetMessageHandler.cpp  GameNetMessageHandler.h  GameNetMessageProcess.cpp  GameNetMessages.h  GameNetStream.cpp  GameNetStream.h  GameNetSystem.cpp  GameNetSystem.h  KwNetAcceptor.h  KwNetCompressMinilzo.cpp  KwNetCompressMinilzo.h  KwNetLocoStreamSystem.cpp  KwNetLocoStreamSystem.h  KwNetMessage.cpp  KwNetMessageEncryptor.cpp  KwNetMessageEncryptor.h  KwNetMiniLock.h  KwNetPrivate.h  KwNetSocket.h  KwNetStreamSystem.h
client/Public/: Array_Base.h  Atomic.h  ClientRPCMethodInterface.h  ClientServerRPCSupport.h  Debug.cpp  Debug.h  Define.h  DefineResult.cpp  DynaString.h  FixedString.h  IntegerHashMap.cpp  IntegerHashMap.h  JsonSerialization.cpp  KwGamePublicLib.cpp  List.h  MessageDefine.h  MessageFactory.h  PacketDataStream.h  ServerRPCMethodInterface.h  ShareStruct.h  Static_Allocator.cpp  Static_Allocator.h  StructMacro.cpp  StructPlatform.h  TabTemplateLoader.cpp  TabTemplateLoader.h  Util.cpp  Util.h  Version.cpp
client/Public/Connector/: ConnectThread.h  Connector.h  ConnectorManager.cpp  ConnectorManager_Epoll.cpp  ConnectorPool.cpp  udpsender.cpp
client/Public/Core/: ArchiveHolder.cpp  BaseTool_Config.cpp  BaseTool_Log.cpp  BaseTool_Thread.cpp  DecoderManager.h  (+6 more)
(+306 files in other folders)
